Add custom choices to select elements, tab key event & notice

--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
 
       var multipleCancelButton = new Choices('#choices-multiple-remove-button', {
         removeItemButton: true,
+        addItems: true
       });
 
       /* Use label on event */
